changes to task 1

--- a/my_flights_bucket.ipynb
+++ b/my_flights_bucket.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'DatabaseConnector' is not defined",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after class definition on line 8 (database_utils.py, line 9)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\zbe17\\Desktop\\AiCore_Projects\\DataAnalytics\\my_flights_bucket.ipynb Cell 1\u001b[0m line \u001b[0;36m9\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/zbe17/Desktop/AiCore_Projects/DataAnalytics/my_flights_bucket.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mboto3\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/zbe17/Desktop/AiCore_Projects/DataAnalytics/my_flights_bucket.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m  \u001b[39m# from database_utils import DatabaseConnector \u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/zbe17/Desktop/AiCore_Projects/DataAnalytics/my_flights_bucket.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m  \u001b[39m# from database_utils import DataExtractor\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/zbe17/Desktop/AiCore_Projects/DataAnalytics/my_flights_bucket.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m  \u001b[39m#  from database_utils import DataCleaning\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/zbe17/Desktop/AiCore_Projects/DataAnalytics/my_flights_bucket.ipynb#W0sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m database_connector \u001b[39m=\u001b[39m DatabaseConnector()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/zbe17/Desktop/AiCore_Projects/DataAnalytics/my_flights_bucket.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m data_extractor \u001b[39m=\u001b[39m DataExtractor()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/zbe17/Desktop/AiCore_Projects/DataAnalytics/my_flights_bucket.ipynb#W0sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m data_cleaner \u001b[39m=\u001b[39m DataCleaning()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'DatabaseConnector' is not defined"
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "\u001b[0m  File \u001b[0;32mc:\\Users\\zbe17\\miniconda3\\envs\\dc_env\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3505\u001b[0m in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 5\u001b[1;36m\n\u001b[1;33m    from database_utils import DatabaseConnector\u001b[1;36m\n",
+      "\u001b[1;36m  File \u001b[1;32mc:\\Users\\zbe17\\Desktop\\AiCore_Projects\\DataAnalytics\\database_utils.py:9\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after class definition on line 8\n"
      ]
     }
    ],
@@ -28,11 +28,9 @@
     "\n",
     "database_connector = DatabaseConnector()\n",
     "data_extractor = DataExtractor()\n",
-    "data_cleaner = DataCleaning()\n",
+    "data_cleaning = DataCleaning()\n",
     "\n",
-    "data_extractor = DataExtractor()\n",
-    "my_flights_bucket = data_extractor.extract_from_s3('s3://myflightsbucket/1987.csv', 's3://myflightsbucket/1989.csv', 's3://myflightsbucket/1990.csv', 's3://myflightsbucket/1991.csv', 's3://myflightsbucket/1992.csv',\n",
-    "                                                   's3://myflightsbucket/1993.csv', 's3://myflightsbucket/1994.csv', 's3://myflightsbucket/1995.csv', 's3://myflightsbucket/1996.csv' )\n",
+    "my_flights_bucket = data_extractor.extract_from_s3(s3_1987, s3_1989, s3_1990, s3_1991, s3_1992, s3_1993, s3_1994, s3_1995, s3_1996)\n",
     "\n",
     "\n",
     "print(my_flights_bucket)\n"
