--- a/my_flights_bucket.ipynb
+++ b/my_flights_bucket.ipynb
@@ -6,34 +6,72 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after class definition on line 8 (database_utils.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[0m  File \u001b[0;32mc:\\Users\\zbe17\\miniconda3\\envs\\dc_env\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3505\u001b[0m in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
-      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 5\u001b[1;36m\n\u001b[1;33m    from database_utils import DatabaseConnector\u001b[1;36m\n",
-      "\u001b[1;36m  File \u001b[1;32mc:\\Users\\zbe17\\Desktop\\AiCore_Projects\\DataAnalytics\\database_utils.py:9\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after class definition on line 8\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Year  Month  DayofMonth  DayOfWeek  DepTime  CRSDepTime  ArrTime   \n",
+      "0        1987     10          14          3    741.0         730    912.0  \\\n",
+      "1        1987     10          15          4    729.0         730    903.0   \n",
+      "2        1987     10          17          6    741.0         730    918.0   \n",
+      "3        1987     10          18          7    729.0         730    847.0   \n",
+      "4        1987     10          19          1    749.0         730    922.0   \n",
+      "...       ...    ...         ...        ...      ...         ...      ...   \n",
+      "1311821  1987     12          11          5   1530.0        1530   1825.0   \n",
+      "1311822  1987     12          13          7   1530.0        1530   1815.0   \n",
+      "1311823  1987     12          14          1   1530.0        1530   1807.0   \n",
+      "1311824  1987     12           1          2   1525.0        1525   1643.0   \n",
+      "1311825  1987     12           2          3   1540.0        1525   1706.0   \n",
+      "\n",
+      "         CRSArrTime UniqueCarrier  FlightNum  ...  TaxiIn  TaxiOut  Cancelled   \n",
+      "0               849            PS       1451  ...     NaN      NaN          0  \\\n",
+      "1               849            PS       1451  ...     NaN      NaN          0   \n",
+      "2               849            PS       1451  ...     NaN      NaN          0   \n",
+      "3               849            PS       1451  ...     NaN      NaN          0   \n",
+      "4               849            PS       1451  ...     NaN      NaN          0   \n",
+      "...             ...           ...        ...  ...     ...      ...        ...   \n",
+      "1311821        1823            CO        638  ...     NaN      NaN          0   \n",
+      "1311822        1823            CO        638  ...     NaN      NaN          0   \n",
+      "1311823        1823            CO        638  ...     NaN      NaN          0   \n",
+      "1311824        1638            CO        639  ...     NaN      NaN          0   \n",
+      "1311825        1638            CO        639  ...     NaN      NaN          0   \n",
+      "\n",
+      "         CancellationCode  Diverted  CarrierDelay WeatherDelay NASDelay   \n",
+      "0                     NaN         0           NaN          NaN      NaN  \\\n",
+      "1                     NaN         0           NaN          NaN      NaN   \n",
+      "2                     NaN         0           NaN          NaN      NaN   \n",
+      "3                     NaN         0           NaN          NaN      NaN   \n",
+      "4                     NaN         0           NaN          NaN      NaN   \n",
+      "...                   ...       ...           ...          ...      ...   \n",
+      "1311821               NaN         0           NaN          NaN      NaN   \n",
+      "1311822               NaN         0           NaN          NaN      NaN   \n",
+      "1311823               NaN         0           NaN          NaN      NaN   \n",
+      "1311824               NaN         0           NaN          NaN      NaN   \n",
+      "1311825               NaN         0           NaN          NaN      NaN   \n",
+      "\n",
+      "         SecurityDelay  LateAircraftDelay  \n",
+      "0                  NaN                NaN  \n",
+      "1                  NaN                NaN  \n",
+      "2                  NaN                NaN  \n",
+      "3                  NaN                NaN  \n",
+      "4                  NaN                NaN  \n",
+      "...                ...                ...  \n",
+      "1311821            NaN                NaN  \n",
+      "1311822            NaN                NaN  \n",
+      "1311823            NaN                NaN  \n",
+      "1311824            NaN                NaN  \n",
+      "1311825            NaN                NaN  \n",
+      "\n",
+      "[1311826 rows x 29 columns]\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import requests\n",
-    "import boto3\n",
     "\n",
-    "from database_utils import DatabaseConnector \n",
-    "from database_utils import DataExtractor\n",
-    "from database_utils import DataCleaning\n",
-    "\n",
-    "database_connector = DatabaseConnector()\n",
-    "data_extractor = DataExtractor()\n",
-    "data_cleaning = DataCleaning()\n",
-    "\n",
-    "my_flights_bucket = data_extractor.extract_from_s3(s3_1987, s3_1989, s3_1990, s3_1991, s3_1992, s3_1993, s3_1994, s3_1995, s3_1996)\n",
+    "my_flights = pd.read_csv (r\"C:\\Users\\zbe17\\Desktop\\AiCore_Projects\\DataAnalytics\\FlightsCSV\\1987.csv\")\n",
     "\n",
     "\n",
-    "print(my_flights_bucket)\n"
+    "print(my_flights)\n"
    ]
   }
  ],
